--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
-    "chess.js": "*",
+    "chess.js": "^0.13.3",
     "chessboardjsx": "^2.4.7",
     "firebase": "^9.15.0",
     "react": "^18.2.0",
+    "react-chessboard": "^1.3.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
