--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "chess.js": "^0.13.3",
     "chessboardjsx": "^2.4.7",
     "firebase": "^9.15.0",
+    "phaser": "^3.55.2",
     "react": "^18.2.0",
     "react-chessboard": "^1.3.1",
     "react-dom": "^18.2.0",
