--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 flask = "*"
 flask-cors = "*"
 boto3 = "*"
-gunicorn = "*"
+gunicorn = "==20.1.0"
 waitress = "*"
 flask-sqlalchemy = "*"
 flask-marshmallow = "*"
