Setup testing for gamepage

--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,12 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
     },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(js|jsx)$",
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "jsx"
+    ],
     "transformIgnorePatterns": [
       "node_modules/(?!chess.js)"
     ],
@@ -74,6 +80,7 @@
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.2",
     "jest": "^27.5.1",
+    "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^27.5.1",
     "socket.io": "^4.5.4",
     "style-loader": "^3.3.1"
