Pytest now running tests

--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,9 @@ flask-sqlalchemy = "*"
 flask-marshmallow = "*"
 python-dotenv = "*"
 flask-socketio = "*"
-eventlet = "==0.30.2"
+eventlet = "*"
+marshmallow-sqlalchemy = "*"
+pytest = "*"
 
 [dev-packages]
 
@@ -24,5 +26,5 @@ python_version = "*"
 dev = "flask run"
 start = "gunicorn app:app"
 waitress = "waitress-serve --host 127.0.0.1:5000 app:app"
-test = "pytest ."
+test = "python -m pytest"
 coverage = "pytest --cov-report term-missing --cov=."
