--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 flask = "*"
 flask-cors = "*"
+boto3 = "*"
 gunicorn = "==20.1.0"
 waitress = "*"
 flask-sqlalchemy = "*"
@@ -13,7 +14,6 @@ flask-marshmallow = "*"
 python-dotenv = "*"
 flask-socketio = "*"
 eventlet = "==0.30.2"
-
 
 [dev-packages]
 
