--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ flask-sqlalchemy = "*"
 flask-marshmallow = "*"
 python-dotenv = "*"
 flask-socketio = "*"
-eventlet = "==0.30.2"
+eventlet = "*"
 marshmallow-sqlalchemy = "*"
 pytest = "*"
 pytest-cov = "*"
